turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:36: error: not found: value colors
  setCouleurBrosse(colors(c));baisseBrosse();leveBrosse()
                   ^Turmite:15: error: not enough arguments for method apply: (i: Int)Array[Array[Int]] in class Array.
Unspecified value parameter i.
  colore(rule()(r)(0))
             ^