turmites.lessons.turmites.helloturmite.HelloTurmite.scala.code
var state = 0;

def step(colors:Array[Color], rule:Array[Array[Array[Int]]] ) {
  
  
  var r:Int =0
  for (i<- 0 to colors.length-1){
    if (getCouleurSol()==colors(i)){   // Recherche de l'indice de la couleur du sol dans le tableau
      r=i     
    }  
  }
  
  colore(rule()(r)(0))
  
  rule(0)(r)(0) match{
    case 0 => 
    case 1 => avance()
    case 2 => gauche();avance()
    case 4 => retourne();avance()
    case 8 => droite();avance()
  }
  
  rule(1)(r)(0) match{
    case 0 => 
    case 1 => avance()
    case 2 => gauche();avance()
    case 4 => retourne();avance()
    case 8 => droite();avance()
  }
  
}

def colore(c:Int) ={
  setCouleurBrosse(colors(c));baisseBrosse();leveBrosse()
}